# comp-therapies-TestProject

./: CMakeLists.txt  README.md  Step6.cpp  Step6.h  Step6RegionGrowing.txx  Step6RegionGrowing1.cpp  Step6RegionGrowing2.cpp  Step6main.cpp  files.cmake
TestProject/: CMakeLists.txt  LICENSE.txt
TestProject/Apps/TestApp/: TestApp.cpp
TestProject/CMake/: CPackSetup.cmake  StartVS.bat.in
TestProject/CMakeExternals/: MITK.cmake
TestProject/Plugins/: Plugins.cmake
TestProject/Plugins/org.mitk.points.registration/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml
TestProject/Plugins/org.mitk.points.registration/documentation/UserManual/: Manual.dox
TestProject/Plugins/org.mitk.points.registration/documentation/doxygen/: modules.dox
TestProject/Plugins/org.mitk.points.registration/src/internal/: MyPointsRegistration.cpp  MyPointsRegistration.h  MyPointsRegistrationControls.ui  org_mitk_points_registration_Activator.cpp  org_mitk_points_registration_Activator.h
